# Manrique_Bossio_marketing_bancario

./: README.md  pyproject.toml
API/: API.py
APP/: app.py
Codigo/: app.py  entrenamiento.py  limpieza_base  modelo.py
Datos/: Trabajo_inicial.ipynb
