[tool.poetry]
name = "marketing-bancario"
version = "0.1.0"
description = "Librerias necesarias para la ejecucion del proyecto de marketing bancario"
authors = ["Camilo Manrique, Armando Bossio"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
streamlit = "^1.39.0"
tqdm = "^4.66.5"
huggingface-hub = "^0.25.2"
distro = "^1.9.0"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
